module(
    name = "nodejs_integration_test",
    version = "0.0.0",
)

bazel_dep(name = "nodejs", version = "0.0.0")
bazel_dep(name = "llvm", version = "0.8.8")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "nodejs",
    path = "../..",
)

nodejs = use_extension("@nodejs//nodejs:extensions.bzl", "nodejs")
nodejs.version(version = "26.3.1")
use_repo(nodejs, "nodejs_26_3_1", "nodejs_crates_26_3_1", "nodejs_icu_26_3_1", "v8")
