load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "node_js2c_test",
    srcs = ["node_js2c_test.sh"],
    args = [
        "$(rootpath @nodejs_26_3_1//:node_js2c)",
        "$(rootpath :config.gypi)",
        "$(rootpath :fixture.js)",
        "$(rootpath :fixture.mjs)",
    ],
    data = [
        ":config.gypi",
        ":fixture.js",
        ":fixture.mjs",
        "@nodejs_26_3_1//:node_js2c",
    ],
)
