load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_test(
    name = "release_archive_test",
    srcs = ["release_archive_test.py"],
    args = [
        "$(rootpath @nodejs_26_3_1//:release_archives_tar_gz)",
        "$(rootpath @nodejs_26_3_1//:release_archives_tar_xz)",
    ] + select(
        {
            "@nodejs_26_3_1//:target_linux_arm64": ["node-v26.3.1-linux-arm64"],
            "@nodejs_26_3_1//:target_linux_x86_64": ["node-v26.3.1-linux-x64"],
            "@nodejs_26_3_1//:target_macos_arm64": ["node-v26.3.1-darwin-arm64"],
            "@nodejs_26_3_1//:target_macos_x86_64": ["node-v26.3.1-darwin-x64"],
        },
        no_match_error = "release_archive_test currently supports Linux and macOS x86_64 and arm64 targets",
    ),
    data = [
        "@nodejs_26_3_1//:release_archives_tar_gz",
        "@nodejs_26_3_1//:release_archives_tar_xz",
    ],
)

py_binary(
    name = "windows_release_archive_validator",
    srcs = ["windows_release_archive_validator.py"],
    visibility = ["//visibility:private"],
)

run_binary(
    name = "windows_release_archive_validation",
    srcs = ["@nodejs_26_3_1//:release_archives_zip"],
    outs = ["windows_release_archive_validation.txt"],
    args = [
        "$(execpath @nodejs_26_3_1//:release_archives_zip)",
        "$(execpath windows_release_archive_validation.txt)",
        "node-v26.3.1-win-x64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    tool = ":windows_release_archive_validator",
)
