load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "generate",
    srcs = ["generate_build_files.py"],
    args = [
        "--buildifier=$(rootpath @buildifier_prebuilt//buildifier)",
    ],
    data = [
        "@buildifier_prebuilt//buildifier",
    ],
    main = "generate_build_files.py",
    tags = ["manual"],
)
