load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    args = [
        "--linux-arm64=$(rootpath @nodejs_26_3_1//:deps/openssl/config/archs/linux-aarch64/no-asm/openssl.gypi)",
        "--linux-x86-64=$(rootpath @nodejs_26_3_1//:deps/openssl/config/archs/linux-x86_64/no-asm/openssl.gypi)",
        "--macos-arm64=$(rootpath @nodejs_26_3_1//:deps/openssl/config/archs/darwin64-arm64-cc/no-asm/openssl.gypi)",
        "--macos-x86-64=$(rootpath @nodejs_26_3_1//:deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/openssl.gypi)",
    ],
    data = [
        "@nodejs_26_3_1//:deps/openssl/config/archs/darwin64-arm64-cc/no-asm/openssl.gypi",
        "@nodejs_26_3_1//:deps/openssl/config/archs/darwin64-x86_64-cc/no-asm/openssl.gypi",
        "@nodejs_26_3_1//:deps/openssl/config/archs/linux-aarch64/no-asm/openssl.gypi",
        "@nodejs_26_3_1//:deps/openssl/config/archs/linux-x86_64/no-asm/openssl.gypi",
    ],
    main = "generate.py",
    tags = ["manual"],
)
