package(default_visibility = ["//visibility:public"])

exports_files([
    ".cargo/config.toml",
    "Cargo.lock",
    "Cargo.toml",
])

filegroup(
    name = "cargo_files",
    srcs = [
        ".cargo/config.toml",
        "Cargo.lock",
        "Cargo.toml",
    ],
)

alias(
    name = "temporal_capi",
    actual = "//vendor/temporal_capi",
)

alias(
    name = "temporal_capi_cpp",
    actual = "//vendor/temporal_capi:temporal_capi_cpp",
)
