load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rs//rs:rust_static_library.bzl", "rust_static_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".cargo/config.toml",
    "Cargo.lock",
    "Cargo.toml",
])

filegroup(
    name = "cargo_files",
    srcs = [
        ".cargo/config.toml",
        "Cargo.lock",
        "Cargo.toml",
    ],
)

rust_static_library(
    name = "temporal_capi",
    srcs = ["src/lib.rs"],
    crate_name = "node_crates",
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = ["@nodejs_crates//:temporal_capi"],
)

cc_library(
    name = "temporal_capi_cpp",
    hdrs = glob(["vendor/temporal_capi/bindings/cpp/**/*.hpp"]),
    linkopts = select({
        "@platforms//os:windows": ["ntdll.lib"],
        "//conditions:default": [],
    }),
    strip_include_prefix = "vendor/temporal_capi/bindings/cpp",
    deps = [":temporal_capi"],
)
