load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

genrule(
    name = "icudata_file",
    srcs = ["source/data/in/icudt78l.dat.bz2"],
    outs = ["common/icudtl.dat"],
    cmd = "$(execpath @bzip2//:bzip2) -dc $(location source/data/in/icudt78l.dat.bz2) >$@",
    tools = ["@bzip2"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "icu_common",
    srcs = glob([
        "source/common/**/*.h",
        "source/common/**/*.cpp",
    ]),
    copts = select({
        "@platforms//os:windows": [
            "/wd4005",
            "/wd4068",
            "/wd4267",
            "/utf-8",
        ],
        "//conditions:default": [
            "-Wno-deprecated-declarations",
        ],
    }),
    defines = [
        "HAVE_DLOPEN=0",
        "UCONFIG_ONLY_HTML_CONVERSION=1",
        "U_CHARSET_IS_UTF8=1",
        "U_USING_ICU_NAMESPACE=0",
        "U_ENABLE_DYLOAD=0",
        "USE_CHROMIUM_ICU=1",
        "U_ENABLE_TRACING=1",
        "U_ENABLE_RESOURCE_TRACING=0",
        "UNISTR_FROM_STRING_EXPLICIT=",
        "UNISTR_FROM_CHAR_EXPLICIT=",
    ] + select({
        "@platforms//os:windows": [
            "U_STATIC_IMPLEMENTATION",
            "UNICODE",
            "_UNICODE",
        ],
        "//conditions:default": [],
    }),
    includes = [
        "source/common",
        "source/i18n",
    ],
    local_defines = [
        "U_COMMON_IMPLEMENTATION",
        "U_ICUDATAENTRY_IN_COMMON",
    ],
    tags = ["requires-rtti"],
    alwayslink = True,
)

cc_library(
    name = "icustubdata",
    srcs = [
        "source/stubdata/stubdata.cpp",
        "source/stubdata/stubdata.h",
    ],
    local_defines = ["U_COMMON_IMPLEMENTATION"],
    deps = [":icu_common"],
)

cc_binary(
    name = "genccode",
    srcs = [
        "source/tools/genccode/genccode.c",
        "source/tools/toolutil/filestrm.cpp",
        "source/tools/toolutil/filestrm.h",
        "source/tools/toolutil/filetools.cpp",
        "source/tools/toolutil/filetools.h",
        "source/tools/toolutil/pkg_genc.cpp",
        "source/tools/toolutil/pkg_genc.h",
        "source/tools/toolutil/toolutil.cpp",
        "source/tools/toolutil/toolutil.h",
        "source/tools/toolutil/uoptions.cpp",
        "source/tools/toolutil/uoptions.h",
    ],
    includes = ["source/tools/toolutil"],
    local_defines = ["U_TOOLUTIL_IMPLEMENTATION"],
    deps = [":icustubdata"],
)

genrule(
    name = "icudata_assembly",
    srcs = [":icudata_file"],
    outs = ["icudt78_dat.S"],
    cmd = select(
        {
            "@platforms//os:linux": "$(execpath :genccode) -q -a gcc -e icudt78 -f icudt78_dat -d $(@D) $(location :icudata_file)",
            "@platforms//os:macos": "$(execpath :genccode) -q -a gcc-darwin -e icudt78 -f icudt78_dat -d $(@D) $(location :icudata_file)",
        },
        no_match_error = "icudata_assembly currently supports Linux and macOS targets",
    ),
    tools = [":genccode"],
)

cc_library(
    name = "icudata",
    srcs = [":icudata_assembly"],
    alwayslink = True,
)

cc_library(
    name = "icuuc",
    deps = [
        ":icu_common",
        ":icudata",
    ],
)

cc_library(
    name = "icui18n",
    srcs = glob([
        "source/i18n/**/*.h",
        "source/i18n/**/*.cpp",
    ]),
    copts = select({
        "@platforms//os:windows": [
            "/wd4005",
            "/wd4068",
            "/wd4267",
            "/utf-8",
        ],
        "//conditions:default": [
            "-Wno-deprecated-declarations",
        ],
    }),
    local_defines = ["U_I18N_IMPLEMENTATION"],
    deps = [":icuuc"],
    alwayslink = True,
)

cc_library(
    name = "icu",
    hdrs = glob([
        "source/common/unicode/*.h",
        "source/i18n/unicode/*.h",
    ]),
    copts = select({
        "@platforms//os:windows": [
            "/wd4005",
            "/wd4068",
            "/wd4267",
            "/utf-8",
        ],
        "//conditions:default": [],
    }),
    include_prefix = "third_party/icu",
    visibility = ["//visibility:public"],
    deps = [
        ":icui18n",
        ":icuuc",
    ],
    alwayslink = True,
)
