exports_files([
    "hermetic-toolchain.patch",
    "llvm-ml.patch",
    "nodejs-config.patch",
    "nodejs-icu.patch",
    "nodejs-targets.patch",
    "simd256.patch",
    "temporal.patch",
    "windows-defines.patch",
    "windows-arm64-cpu.patch",
    "windows-libraries.patch",
    "zlib.patch",
])
